# agen

./: .gitignore  README.md  lite_sample_sounds.py  setup.cfg  setup.py
docsrc/: index.rst
notebooks/: 29 - Audio Generation.ipynb
sound/: audio.py
utils/: infinite_waveform.py  plotting.py
