[metadata]
version = 0.0.1
description = There is a bit of an air of mystery around this project...
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = loopyng
display_name = loopyng

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

